will end stepik js for beginer

--- a/R0_tail/n8/Тремор/0. Вход/лиза/0. Tats.md
+++ b/R0_tail/n8/Тремор/0. Вход/лиза/0. Tats.md
@@ -1,29 +1,70 @@
-Лиза открыла файл подназванием "Доклад о Перекидышах" в текстовом редакторе. Пробежалась глазами по вступлению, исправила пару старых ошибок и перефразировала пару предложений. В меню редактора слева, она щелкнула мышью по вкладке Бледный. В открывшемся файле её ждал фарш из её собственного текста, присутствовали строки расшифрованых аудио заметок и строки понадёрганые из рапортов ЕАР, "Крассной Рукавички" и СКП. Предстояло разделить слитую дезу, от объективной действительности, проводя собственные следственные мероприятия.
+Окна её комнаты открывали вид на Доки. Сектор с малыми частными заводами, складами. Ранее всё это было територией АПП. Всего на третий день с задержания Лунга в Доки со стороны Депо полезли Барыги, осваивая новых клиентов и торговые точки. 
 
-Она расширила поле своего зрения, чтобы можно было читать абзацами, получая подсказки от силы и принялась систематезировать, причёсывать свой доклад. Иногда она останавливалась когда поток подсказок от её силы становился слишком сумбурным, она сужала поле зрения чтобы читать словами в слух и дать себе стабилизировать внимание, прежде чем вернутся к ускоренной обработке текста:
--  Им снилось как они находили в лаборатории заблудившегося слепого мальчика который выпытывал у них расположение секретных объектов ..., ... зрительные нервы не развиты, при попытке задержания отрядом "Вымпел", было замечено как он атаковал зеркало...,  ... При попытке задержания спецназом ЕАР, был подстрелен транквилизатором R33799, в правую скулу. Телепортировался прежде чем потерял сознание.
+Бордели которые крышевали люди Лунга, столкнулись с аномальным ростом плесени, по несколько раз заночь там начали происходить пьяные драки. Клиенты, охранники и шлюхи уезжали в неотложку на такси с ножевыми ранениями, сотрясениями мозга и алкогольным отравлением. 
 
-Окна в комнате Лизы были на солнечной стороне. Комната была хорошо освещена солнечным светом. Рулонные шторы блек-аут, были скручены под потолок и не применялись в последнюю неделю. За это можно было поблагодарить Гриба. Его капли от мигрени Мыслителя устраняли боль и светобоязнь, при этом не превращали тебя в овощь. На время мигрени, сила слабела процентов на 80 как и раньше, но это уже было лучше всего что могла предложить та же МедХолл. Во всяком случае то что они предлагали официально.
+В кварталах Доков со стороны центра, люди Империи 88, начали диктовать свои порядки. Команда Чистоты тоже не стали держатся в стороне, их видели в Южный раёнах Доков, они охотились на наркоманов и пушеров "неправильной расы".
 
-Лиза не доводила свою силу до полного отключения и всегда оставляла запас на пару вопросов чтобы проверять безопасность принимаемого препарата.
+Демон Ли не изявил желания по боротся за свои територии и уже на пятый день с моммента как Лунг "покинул" Броктон-бей. Територия была закреплена за Империей. Доки постоянно патрулировались Новой Волной и Стражами, но статус Кво был установлен, вакум власти на Черном Рынке заполнился и бизнес вернулся на отлаженные рельсы.
 
-Она поставила чашку кофе на рабочий стол с двумя клавиатурами и тремя мониторами. На левом мониторе были расположены шесть видео потоков изображающих обьёмню симуляцию пространства созданную из информации собранной низкочастотными сканерами расположенными на первом этаже Муравейника, для слежки за Перекидышами. Заказчик предоставил им помещения на минус-первом этаже Муравейника.
+Разрозненные групки бывших АПП-шников, работали самостоятельно, стараясь быть тише воды и ниже травы.
 
-Сначала он пробовал использовать микрофоны и камеры, но Бледный нашел их все и вернул наёмникам Заказчика которые круглосуточно несли дежурство в качестве охраны на этажах ниже нулевого, на пятнадцатом этаже и на последнем.
+Лизе очень хотелось как то дать общественности или хотя бы другим маскам знать, что это она нашла и указала на тайники, лаборатории и консперативные квартиры азиатской банды. Но, приходилось себя сдерживать и молчать в тряпочку.
 
-Лиза через клавиатуру по переключалась между сценами. Палата Пряди, ровное медленное попискивание апаратов жизнеобеспечения, черепная коробка пациентки вскрыта, шесть механических пальцев с иглами и щипцами, проводят електро-стимуляцию мозга, вкалывают нейральные стволовые клетки, питательные вещества и нейростимуляторы предоставленные Грибом и Дрёмом.
+Комната Лизы была не большая. У неё была своя ванная комната, кровать, рабочий стол, мощный ПК, три монитора. Это дало ей почувствовать как ограничены были возможности её пара-сил, пока она бомжевала. Словно её мозг был в режиме интелектуальной гибернации. Она признавалась себе, что также причиной улучшений были востановление режима сна, полноценное питание и препарат против мигрени-мыслителей. Последний она получила от Грибника.
+
+Благодаря этим каплям она больше не боялась мигрени. В последние дни она использовала силу на максимум, больше чем когда либо. Как и предсказывали способности, препарат защищал её от головных болей, светобоязни, сонливости. Полное отключение её способностей из-за перерабатывания всё ещё происходило. Но это уже было лучше всего что могла предложить та же МедХолл. Во всяком случае из того что они предлагали официально. 
+
+Впрочем она всегда оставляла в запасе пару вопросов, для проверку препарата.
+
+Несколько доз были переданы химикам Заказчика, она помогла им всем чем смогла, ссылаясь на заметки Грибника и видео ролики его рабочего процесса, которые были приобретены у Рыжего, Заказчиком. Реверс инженеринг удовлетворительных результатов не дал. Данный препарат оказался не позубам химикам Заказчика, для синтеза в лаборатории. Максиму что им удалось, это произвести примитивный образец с тридцатью процентами эффективности. 
+
+Дальше, предстояло найти парачеловека-технаря с соответствующими способностями или добится от Грибника содействия в создании аналога подходящего для маштабирования.
+
+С последним была заминка. Все внимание Гриба было сосредоточено на попытке воскресить мёртвый мозг парачеловека. Желание по играть в бога полностью завладело его вниманием и Мистер Дрём нанятый Перекидышами для этого же вопроса, лишь подталкивал его в этом направлении.
+
+На кухне Лиза сделала себе кофе. Сука от кофе отказалась, она со своими собаками окупировала диван и втыкала в телевизор.
+
+Вернувшись к себе она поставила чашку с кофе на рабочий стол. 
+
+На левом мониторе были расположены шесть видео потоков изображающих обьёмню симуляцию пространства созданную из информации собранной низкочастотными сканерами расположенными на первом этаже Муравейника, для слежки за Перекидышами. Заказчик предоставил Перекидышам помещения на минус-первом этаже Муравейника.
+
+Лиза открыла файл подназванием "Доклад о Перекидышах" в текстовом редакторе. Пробежалась глазами по вступлению, исправила пару старых ошибок и перефразировала пару предложений. В меню редактора слева, она щелкнула мышью по вкладке Бледный. В открывшемся файле её ждал фарш из её собственного текста, присутствовали строки расшифрованых аудио заметок и строки понадёрганые из рапортов ЕАР, "Крассной Рукавички" и СКП. Предстояло разделить слитую дезу, от реальности, проводя собственные расследования.
+
+Она расширила поле своего зрения, чтобы можно было читать абзацами, получая подсказки от силы и принялась систематезировать, причёсывать свой доклад.
+
+Из опроса проведённого с солдатами нёсшими охрану в Советсткой военной лаборатории подвергшейся нападению Перекидышей в 1996 году:
+За трое суток до нападения, двоим солдатам снилось их рабочее место и слепой мальчик в возрасте пятнадцати - восемнадцати лет. Мальчик говорил что заблудился и задавал много вопросов о расположении подопытных.
+
+Из отчёта оператора спец-отряда "Вымпел", об операции по задержанию Перекидышей. 2008 год.
+Зрительные нервы Бледного не развиты, при попытке задержания, было замечено как он атаковал зеркало. Был подстрелен транквилизатором R33799, в правую скулу. Телепортировался прежде чем потерял сознание.
+
+25.09.2010
+
+Причина по которой Заказчик использовал технарские инструмменты слежения за Перекидышами, была способность пространственного-умника у Бледного. Микрофоны и скрытые камеры, Бледный нашел и вернул наёмникам Заказчика которые круглосуточно несли дежурство в качестве охраны на этажах ниже нулевого, на пятнадцатом этаже и на последнем.
+
+Через клавиатуру Лиза по переключалась между сценами. 
+
+Первая была палата Пряди, ровное медленное попискивание апаратов жизнеобеспечения, черепная коробка пациентки вскрыта, шесть механических пальцев с иглами и щипцами, проводят електро-стимуляцию мозга, вкалывают нейральные стволовые клетки, питательные вещества и нейростимуляторы предоставленные Грибом и Дрёмом.
 
 В коридоре убиралась горничная-медсестра. Она представлялась Консуелой, прятала шыло под юбкой, а в своей сумочке, которую она оставляла в раздевалке, у неё хранился восемнадцатизарядный глок. Однажды через нискочастотные сканеры, Лизе удалось уловить созвон Консуеллы с Заказчиком. Он попросил её не брать с собой пистолет когда она убирает комнаты.
 
 Лиза отвернулась от левого монитора и открыла на среднем, доклад СКП от Лауры Компсток. Она читала его ранее и сейчас пробегала по нему взглядом в надежде что сила подкинет ей новые подсказки. Лаура описывала как вступила в половую связь с Бромом\Рыжым против своей воли, будучи "очарована" его пара-силами. Она выдвигала несколько теорий о том каким образом, он клонировал её рабочий телефон и почему нет её вины в том что, Прядь с помощью нэт.краулеров и клонированого телефона Лауры, получила доступ к внутренней переписке сотрудников аналитического отдела СКП в Броктон-Бей.
 
-Через alt+tab Лиза открывает директорию со своими докладами готовящимися для передачи Заказчику. Вывела на екран файл с названием "Доклад. Перекидыши. Рыжий.doc". 
-
-Она читает предложениями, а когда теряет темп из-за лавины подсказок от силы и начинает читать в слух заставляя себя сосредоточится:
-- ... Сомнамбули́зм и Невраастения ..., ... не разделяйтесь, оставайтесь друг у друга на виду ...,  ... если его глаза не прикрыты тёмными очками или повязкой, не смотрите на его лиццо и ему в глаза ..., ... позитивные результаты нейтрализации "очаровующего" эффекта проявили, сенсорная депривация(от шести часов), социальная депривация(от 12 часов), сеанс "терапевтической пересборки убеждений" см. прил. 18, реком. док. Станислав Первушин, сеанс анти-пропагандистского влияния  ..., ... набор "санкционированных убеждений", если боец замечает необходимость изменения такого убеждения непосредственно во время миссии, он должен сообщить об этом своему Оператору ... . 
+Через alt+tab Лиза открыла директорию со своими докладами готовящимися для передачи Заказчику. Вывела на екран файл с названием "Доклад. Перекидыши. Рыжий.".
+Сомнамбули́зм и Невраастения.
+Рекоммендуемые меры противодействия: 
+- Не разделяйтесь, оставайтесь друг у друга на виду. 
+- Если его глаза не прикрыты тёмными очками или повязкой, не смотрите на его лиццо и в глаза. 
+Позитивные результаты нейтрализации "очаровующего" эффекта Рыжего, проявили: 
+- Сенсорная депривация(от шести часов).
+- Социальная депривация(от 12 часов).
+- Сеанс "терапевтической пересборки убеждений" см. прил. 18, реком. док. Станислав Первушин, сеанс анти-пропагандистского влияния.
+- Набор "санкционированных убеждений", если боец замечает необходимость изменения такого убеждения непосредственно во время миссии, он должен сообщить об этом своему оператору.
 
 Лиза редактирует свой доклад дополняя его новыми догадками и преключается на файлы посвящённые Пряди:
-- ... пишет самообновляющийся вредоносный код ..., ... в Крассной Рукавице работала в отделе выслеживающем незарегистрированых паралюдей для ЕАР  ..., ... склонна к вспышкам агрессии ....
+- Пишет самообновляющийся вредоносный код. 
+- В Крассной Рукавице работала в отделе выслеживающем незарегистрированых паралюдей для ЕАР.
+- Склонна к вспышкам агрессии.
 
 Из динамиков компютора раздаётся голос Мрака:
 - Готовы.
@@ -33,7 +74,7 @@
 
 Она просматривает на левом мониторе, видео потоки с камер установленных в Муравейнике. Сканеры показывали Регента и Мрака на первом этаже у поста охраны. Щелчёк мыши и левый монитор покрывается окошками с видео из камер в лаборатори-студии Грибника и Мистера Дрёма. Большой лабораторный стол покрыт склянками, аквариумами. Из техники микроскоп, центрифуга, холодильник и печь. В другом конце студии на кухонном столе акустическая система, из колонок раздаются вопли и визги. Скривившись Лиза убавляет звук от их микрофонов до нуля.
 
-Щелчёк мышю. На правый монитор выводятся изображения с камер наблюдения установленных в загородном котедже. Внутри, одна из комнат обита для звуко изоляции и является бункером способным выдержать ракетный удар. В гостинной на диване развалился Арлекин, она играет на приставке в гоночки. Сегодня её костюм и грим, трико в стиле кубизма красных и зелёных цветов. На кухне Челюсть и Синегал, наёмники Заказчика с которыми Лиза ранее уже работала.
+Щелчёк мышю. На монитор с права, выводятся изображения с камер наблюдения установленных в загородном котедже. Внутри, одна из комнат обита для звуко изоляции и является бункером способным выдержать ракетный удар. В гостинной на диване развалился Арлекин, она играет на приставке в гоночки. Сегодня её костюм и грим, трико в стиле кубизма красных и зелёных цветов. На кухне Челюсть и Синегал, наёмники Заказчика с которыми Лиза ранее уже работала.
 
 Она переводит взгляд на Мрака, в окошке на левом мониторе. Включает микрофон к нему и говорит:
 - Их нет на месте. Бледный в палате рядом с Прядью. Ждём.
@@ -43,62 +84,12 @@
 
 Лиза вывела на левый монитор информацию собранную сканером за последние трое суток и запустила их воспроизведение в ускоренной перемотке.
 
-Большую часть дня, Бледный проводит в палате Моны, в кресле, но это лишь верхушка айсберга. 
+Большую часть дня, Бледный проводил в палате Моны, в кресле, но это лишь верхушка айсберга.
 
 Видео поток от СИ созданый из волн собраных на минус первом этаже Муравейника, который был выделен под нужды Перекидышей, дмонстрировал в коридоре прозрачного гуманоидного фантома, размытая фигура прогуливающаяся по коридору, заглядывает в комнаты, проходит сквозь стены и двери. Фантом ходит за горничной, за охранниками, никогда не поднимается выше нолевого этажа. Люди на него не реагируют, его не видят. А если столкнутся с ним то могут испытать ASMR эффект, подсказывает Лизе её сила.
 
-Лиза проматывает видео ряд, замедляет на сцене, в которой Бледный делал себе бутерброд на кухне, ощупывая и обнюхивая продукты. Фантом проходит сквозь двери в комнату, где Бром и Мортимер играют в карты, садится к ним за стол, на пустой стул. Бледный исчезает с кухни оставляя после себя фантома, который отправляется бродить по коридору.
+Она проматывает видео ряд, замедляет на сцене, в которой Бледный делал себе бутерброд на кухне, ощупывая и обнюхивая продукты. Фантом проходит сквозь двери в комнату, где Бром и Мортимер играют в карты, садится к ним за стол, на пустой стул. Бледный исчезает с кухни оставляя после себя фантома, который отправляется бродить по коридору.
 
-Спустя пятнадцать секунд, фантом в комнате Брома, покрылся серыми и зелёными шумами на секунду, а потом на его месте появился Бледный с бутербродами. Бром взвизгнул выскочив из-за стола, а потом они с Мортимером рассмеялись. Бледный ограничился зубастой улыбкой.
+Спустя пятнадцать секунд, фантом в комнате Брома, покрылся серыми и зелёными шумами на секунду, а потом на его месте появился Бледный с бутербродами. Остальные не реагируют на его появление.
 
-Сила Лизы указала на то что Бледный притворяется что не умеет улыбатся. Причины задержки? Он сначала телепортировался куда-то еще. Это не совсем телепорт. Перемещения фантомов ограничено радиусом. Радиус есть статический на расстоянии вытянутых конечностей, привязанный к телу Бледного, к носителю и есть динамический, который растёт когда Бледный остаётся на одном месте и уменьшается до полного исчезновения, когда Бледный выходит за его пределы. Предел есть, он больше сотни метров и меньше трёх сотен. У Рыжего и Мортуса, Пряди когда она была еще жива, радиус фиксированный до двух метров. Остальные не "очаровуют" взглядом как Рыжий. Помехи силам мыслителей-предсказателей создавала только сила Пряди.
 
-Новые записи ложились в её доклад, заполняя старые пробелы и разрушая ложные гипотезы.
-
-Раздалось шипение и короткий пик из тумбочки в столе. Лиза открыла её и вытащила рацию, вывела на правый монитор картинки с камер котеджа и приняла вызов:
-
-- Приём.
-- Прибыли. - Сказал Арлекин.
-
-Лиза раскрыла на весь екран картинку с камеры в прихожей. На видео, Челюсть открыл входную дверь впуская троицу. Бром, Морт и Матвей. Первый был одет в ярко желтое пальто, джинсы, бежевые ботинки, шляпа из грибной замши и огромные чёрные очки. Мортимер предпочитал тёмно-зелёные цвета с уклоном в милитари, он был одет в брюки и куртку карго. 
-
-Оба широко улыбаясь как идиоты и звеня пакетами, ввалились в прихожую. Матвей на их фоне выглядел, странно. Высокий, тихий, в строгом костюме тройка и класическом пальто. Крассные полосы на контурах воротника и манджетах его чёрной рубашки с крассными пуговицами.
-
-Бром и Морт вели спор об ...
-разбулись, скинули верхнюю одежду и прошли на кухню с Челюстью там их встретил Синегал. Бром в майке алкоголичке и с петлёй на шее выполненой ввиде Эшафотного узла, принялся выгружать бухло и закусь из пакетов.
-
-Матвей развесил одежду. Разставил их обувь. Остановился у зеркала и снял пиджак. К нему подошел Арлекин, принял из его рук пиджак и повесил к курткам на вешалку. Ловким движением она подбросила ему в карман записку.
-
-Лиза переключилась на камеру Мрака, включила микрофон и сказала ему:
-- Начинайте.
-
-На левый монитор, выведены камеры Муравейника, она видит как Мрак и Регент заходят в лифт, едут на 15 этаж.
-
-Лиза набирает номер Дрёма и разворачивает на весь екран кртинку из лаборатории Гриба. Там стены и потолок покрыты мицелярной сеткой, цветовая гамма между грязно желтым и кремово белым. В трубке она слушает гудки. Она включает звук из лаборатории на 10%. Акустическая система в лабе исторгает из себя скрим, кардан и гитару. Рингтон телефона, тонет на её фоне. Но Гриб наконец-то, что-то замечает. Его споры там везде и на всём. Он выходит из обвешаной целофановыми шторами лаборатории пересекает студию и берёт телефон Дрёма. 
-
-Лиза видит это на камерах и знает что у Дрёма этот номер записан как Сплетница. Её сила отмечает что, Гриб подал Дрёму "сигнал" как-то изменил грибы возле Дрёма или еще что-то. Дрём вытаскивает пульт из кармана своего лабораторного халата и вырубает музыку. Помещение погружается в благодатную тишину.
-
-Лиза сбрасывает звонок, а Мрак стучит в дверь лабы. Она открывает рапорт русского полковника, его имя удалено из докуммента. Заголовок гласит "Благоприятные прецеденты.". Через ctrl+f Лиза находит раздел посвященный телепортам Перекидышей, поток информации от её силы затапливает сознание, временами она начинает читать в слух чтобы заземлится:
-- ... избегайте физического контакта кожа к коже ..., ... не соглашайтесь на "прогулку", или "срезать дорогу", не "соглашатесь на телепортацию", ... если вас теллепортировали в место похожее на лес, но с незнакомыми вам созвездиями в небе, или без определенного источника солнечного света или с подозрительно себя ведущими деревьями(тут и далее такое место будет называтся Зона Лес) ... , ... солдат вернулся из Зоны Лес убив Мертвеца который теллепортировал его туда ... , ... солдат покинул зону Лес удалившись на 25 метров, от телепортировавшего его туда Бледного  ... .
-
-Сила Лизы связывает Мортимера, Мортуса и Мертвеца в одного человека. Зона Лес это не Земля Бет, возможно даже не ...
-
-Чувство дезориентации. Лиза с удивление замечает что у неё участился пульс. Посмотрев на часы она отмечает что потеряла около десяти секунд. Старах и азарт заствляют волоски на коже шевелится. Она гонит прочь "запрещенные" мысли, скидывает подозрения о Зоне Лес в памятки и каллендарь, они напомнят о себе потом.
-
-На мониторе справа она открывает видео ряд из "защищённой комнаты" в котедже. Серая комната, обитая мягким войлоком, в центе столик и два стула источники света на потолке в каждом углу. СИ аналогичные тем которые используются в Муравейнике для слежки за Перекидышами, здесь они установлены в двух соседних комнатах слева и справа. 
-
-Матвей сидит за столом. Арлекин напротив. Мортимер справа, опирается спиной на стену. Камера на кухне, показывает как Бром, Синегал и Челюсть сидят за столом, перед ними планшет паказывающий видео из "безопасной комнаты". Синегал и Челюсть вооружены, у каждого по глоку в кобуре на поясе. Наверняка есть и другое оружие ближнего боя, спрятаное под одеждой. Бром как их противоположность, он дрыщеват, безоружен, улыбается, постоянно говорит, пытается шутить.
-
-Лиза видит что наёмников напрягает Бром, они его опасаются, он поправляет удавку у себя на шее словно это галстук. Заказчик снарядил своих людей не только летальным оружием, но и транквилизаторами против Мортимера. Наёмники были знакомы с теми же рапортами о Перекидышах, на основе которых Лиза сейчас готовила свой доклад.
-
-Способности Перекидышейописанные в докладах "Крассной Рукавички" и ЕАР, не выделялись на фоне других паралюдей. Выделялись сами Перекидыши, пережившие почти 20 лет с моммента когда они получили свои силы.
-
-В "безопасной комнате" Матвей закатал рукав рубашки до плеча. Арлекин прикурила от зажигалки протянутой ей Мортом и создала огненый шар. Она подхватила огонь и раздавила об руку Матвея. Морт прикурил сигарету и себе. Матвей вытер мокрые глаза черным платком и откинулся на спинку направив лиццо в потолок. На внутренней стороне его руки набухали волдыри от ожога.
-
-- Все, на выход! - Командует Морт. Арлекин брорсает сигарету в пепельницу не докурив и почи выбегает из комнаты, закрыв за собой дверь. Морт занимает её место, а Матвей дрожащими пальцами забирает её сигарету из пепельницы. Включается вытяжка и струйки дыма тянутся вверх.
-
-Видео-потоки предоставляемые СИ, при близком рассмотрении и высокой детализации начинают показывать изменения в електро-химическом излучении активной части Короны в мозге Матвея.
-
-Впрочем это сейчас вторично. Заказчик предложил им оплату, за возможность исследовать процессы проявляющиеся в момменты клонирования Матвеем чужих сил. Целью было занять Перекидышей, разделить, изучить.
-
-Лиза подключила две пары наушников и вставила по одному себе в уши. Из левого, она будет получать аудио дорожку Мрака, а из правого аудио дорожку из "безопасной комнаты".
