--- a/R0_tail/n8/Тремор/0. Вход/лиза/Доклады/стая/Протоколы противодействия Перекидышам..md
+++ b/R0_tail/n8/Тремор/0. Вход/лиза/Доклады/стая/Протоколы противодействия Перекидышам..md
@@ -2,21 +2,21 @@
 0. всё тоже что и против всех остальных вместе взятых, если неизвестно какая сила у него в данный моммент.
 
 Против Рыжего.
-0. Держатся вместе, неследить за собой и каждым членом комманды. Не терять членов комманды из виду
+0. Держатся вместе, следить за собой и каждым членом комманды. Не терять членов комманды из виду
 1. Не смотреть в на лиццо когда его глаза не скрыты тёмными очками или повязкой.
 
 Против телепорта Перекидышей.
 0. Избегать физического контакта кожа к коже.
 1. Не соглашатся на прогулку, срезать дорогу, не соглашатся на телепортацию.
 2. Если вас теллепортировали в место похожее на лес но с незнакомыми вам созвездиями в небе или без определенного источника солнечного света или с подозрительно себя ведущими деревьями(тут и далее такое место будет называтся Зона Лес):
-- Был прицедент когда солдат вернулся из зоны Лес убив Мертвеца теллепортировавшего его туда.
-- Был прицедент когда солдат покинул зону Лес удалившись от теллепортировавшего его туда Бледнгого на 25-50метров . 
+- Был прицедент когда солдат вернулся из Зоны Лес убив Мертвеца теллепортировавшего его туда.
+- Был прицедент когда солдат покинул Зону Лес удалившись от теллепортировавшего его туда Бледнгого на 25-50метров . 
 
 Против Бледного.
 0. Покинуть его радиус.
 1. Не засыпать рядом с ним или оставить кого-то сторожить вас пока вы спите.
 2. Использовать снайпера или роботехнитку.
-3. Прикрывайте друг-другу спины.
+3. Не оставляйте спину открытой. Может упасть сверху.
 
 Против Мертвеца.
 0. Транквилизаторы см. приложение №1 список Мертвеца
