--- a/R0_tail/n8/Тремор/0. Вход/лиза/Доклады/стая/изломПерекидышей.md
+++ b/R0_tail/n8/Тремор/0. Вход/лиза/Доклады/стая/изломПерекидышей.md
@@ -1,16 +1,16 @@
 _[[излом-Перекидышей]](иП) работает так:
-0) Когда он включён на 100% ты покидаешь наш мир и оказываешься в Лесу. иП100%, ты в Лесу и можешь коммуницировать с теми у кого иП+-30% и следовательно они в нашем мире.
+0) Когда он включён на 100% ты покидаешь наш мир и оказываешься в Лесу. иП100%, ты в Лесу и можешь коммуницировать с теми у кого иП30%+ и следовательно они в нашем мире.
 
-1) Когда иП+-30% ты в нашем мире, но можешь слышать и переговариваться с теми кто тоже использует иП+-30%. Лес выступает в роли телефона. Но "дозвонится" можно только до тех кто не в Лесу.
+1) Когда иП30%+ ты в нашем мире, но можешь слышать и переговариваться с теми кто тоже использует иП30%+. Лес выступает в роли телефона. %%Но "дозвонится" можно только до тех кто не в Лесу.%%
 
-3) Применение  иП вызывает усталость и дезориентацию, эффект накопительный.
+%%3) Применение  иП вызывает усталость и дезориентацию, эффект накопительный.%%
 
-4) Когда вы все в Лесу коммуникация через Излом невозможна.
+%%4) Когда вы все в Лесу коммуникация через иП невозможна.%%
 
 5) Каждый Перекидыш это точка выхода из Зоны Лес не зависимо от включённости иП. Даже если иП0%.
 
-6) Их иП даже будучи не включённой оставляет (назовём это запахом??), короче везде где персонаж с иП  задерживается хотя бы на 15м эти зоны становятся доступны для "телепорта" т.е. превращаются в точки выхода из Зоны Лес. активны 15м, если персонаж там пробыл 15м и дольше если он пробыл там дольше.
+6) иП даже будучи не включённой оставляет (назовём это запахом??), короче везде где персонаж с иП  задерживается хотя бы на 15м эти зоны становятся доступны для "телепорта" т.е. превращаются в точки выхода из Зоны Лес. активны 15м, если персонаж там пробыл 15м и дольше если он пробыл там дольше.
 
-7) Перетаскивать в Лес погружая объект в иП100%, можно — живые объекты только с их согласия. не живые без их согласия. И ето всегда накладывает штрафы и дебафы на Перекидыша. в виде усталости.
+7) Перетаскивать в Лес погружая объект в иП100%, можно — живые объекты только с их согласия. не живые без их согласия. %%И ето всегда накладывает штрафы и дебафы на Перекидыша. в виде усталости.%% Рассмотрим каноничный дебаф ввиде "Лес становится опаснее".
 
 9) Визуальный эффект фантомные-шумы(артефакты)
