--- a/R0_tail/n8/Тремор/0. Вход/лиза/Доклады/хочется изложить в главе лизы.md
+++ b/R0_tail/n8/Тремор/0. Вход/лиза/Доклады/хочется изложить в главе лизы.md
@@ -13,28 +13,27 @@
 Логи инсайд
 	Я не хочу умирать, я доверяю своей комманде, я не доверяю Перекидышам, 
 	Я стремлюсь предотвратить воскрешение Пряди, я стремлюсь выяснить какие експерримменты с парачеловеческими силами проводят Перекидыши, Грибник и Мистер Дрём. 
-	Я не убиваю, умышленно, своими руками как и моя комманда. Мои интересы и интересы моей комманды прежде всего. 
-
+	Я не убиваю, умышленно, своими руками как и моя комманда. Мои интересы и интересы моей комманды прежде всего.
 
 Враг
 	Действуем исходя их предположения что в арсенал Перекидышей входять телепортация у Бледного, Рыжего, Мортуса и Ральфа. 
 	Единственное официальное свидетельство существования Ральфа, это записи скрытыми камерами. На этих записях Бледный, Рыжий и Мортус иногда обращались к нему, запрашивая информацию о место положении кейпов и об способностях паралюдей. Эта инфа не является дезой. Ральф действительно существует. 
 	Перекидыши действительно могут коммуницировать между собой. 
 	Пределы дистанции на которой они могут коммуницировать между собой не известны.
-	Пределы дистанции на которую они могут теллепортироватся не известны. Рабочий минимум, 100 километров. 
+	Пределы дистанции на которую они могут теллепортироватся не известны. Рабочий минимум, 10 километров. 
 	Процесс теллепортации занимает одну-две секунды.
 	Подчинение Рыжего действует от 12 часов. Сеанс психоанализа может нейтрализовать подчинение.
-	Бледный трижды находил скрытые камеры у себя на этаже. Каждый раз он возвращал их наёмникам Заказчика. Первую партию скрытых камер и микрофонов он начал собирать спустя сутки с моммента как их комманда расположилась на этаже предоставленном им в качестве убежища. Он не искал, он сразу шел к ним, протягивал руку и нащупывал искомое. Анатомически, он был слеп.
+	Бледный находил скрытые камеры у себя на этаже. Каждый раз он возвращал их наёмникам Заказчика. Первую партию скрытых камер и микрофонов он начал собирать спустя сутки с моммента как их комманда расположилась на этаже предоставленном им в качестве убежища. Он не искал, он сразу шел к ним, протягивал руку и нащупывал искомое. Анатомически, он был слеп.
 	по наблюдениям людей подкупленных Заказчиком, Перекидыши могут переговариватся между собой без спец средств. Предельная дистанция из контакта неизвестна.
 	Слышит ли каждый из них происходящее возле каждого из них, неизвестно.
 	Исходя из данных собраных во время стычки АПП с Перекидышами на Южном холме,
 	среднее зарегистрированное время задержки между "прыжками" находится в диапазоне от 20 секунд до минуты. Задержка между исчезновением в одной точке и появлением в другой от двух секунд до минуты.
-	Лучший результат показал Бледный, три "прыжка" подряд за минуту и восемь секунд с задержкой в секунду, две и снова в секунду.
+	Лучший результат показал Бледный, три "прыжка" подряд за минуту и восемь секунд с задержкой в секунду-две и снова в секунду.
 	Моя сила говорит что диапазон в котором они могут "прыгать" ограничен диапазоном от метра до двух вокруг Рыжего, Мертвеца, Пряди, Бледного. Вокруг Бледного этот диапазон иногда бывает больше зарегистрированный предел 25 метров.
 	Исходя из этого принято решение действовать так будто бы он видит все скрытые и спрятаные вещи на своём этаже, видит содержимое твоих карманов и начинку твоей техники.
 	Мортимер. Имеет слабое сердце, может умереть из-за "спазма лёгких". Воскресает. Каждое последующее воскрешение в диапазоне суток или двух, занимает больше времени. Из его досье предоставленного в ЕАР Крассной Рукавицей следует что был прицедент когда его убивали 10 раз за сутки, для 10 воскрешения ему потребовалось 30минут. Заказчик уже снабдил своих людей транквилизаторами которые не убъют Мортуса.
 	Минимальная продемонстрированна пауза между телепортами составляет 15 секунд. Этот лучший результат принадлежит Бледному. Остальные демонстрировали паузу между телепортами не ниже 30 секкунд.
-	Высоко вероятно что Мортимер, Рыжий и Бледный могут "чувствовать" происходящее друг с другом на растоянии 100км.
+	Высоко вероятно что Мортимер, Рыжий и Бледный могут "чувствовать" происходящее друг с другом на растоянии 10км.
 	Полярник клонирует силы применённые к нему. Смотри приложение Полярник\Лунг.
 
 Задачи 
@@ -43,8 +42,7 @@
 
 Стремительность и быстрая реакция нужны для урезания времени на планирование со стороны моих аппонентов.
 
-
 Должно
 	Если я не могу предотвратить воскрешение Пряди, должно удалится от её тела и причин её воскрешения, прежде чем будет совершен удар по ним. 
 	Если выясницца что работа Перекидышей может угрожать благу, моему или моей комманды, должно принять меры по их нейтрализации. 
-	Наши гражданские и кейповские личности должно хранить в тайне. 
+	Наши гражданские и кейповские личности должно хранить в тайне.
