--- a/R0_tail/n8/Тремор/0. Вход/Hijack/Структура. Hijack.md
+++ b/R0_tail/n8/Тремор/0. Вход/Hijack/Структура. Hijack.md
@@ -1,5 +1,5 @@
-[[структура-N8]][[Структура. Вход.]] [[Тремор]]
-[[Hijack]] [[Браян/Мрак]]  [[Сплетница/Лиза]] [[Сука/Адская Гончая]][[Undersiders]] [[Заказчик]] 
+[[структура-N8]][[Структура. Вход.]][[Тремор]]
+[[Hijack]] [[Браян/Мрак]]  [[Tats]] [[Сука/Адская Гончая]][[Undersiders]] [[Заказчик]] 
 [[Прядь/Мона/Крыса]] [[Грибник]] [[Крассная Рукавица]][[Мертвец]] [[Бледный]]
 [[Теневой Сталкер]] [[Батарея]] 
 [[Майнд Карта Лизы]][[контузия Алек]][[Одет]][[Тейлор]]
