--- a/R0_tail/n8/Тремор/0. Вход/Структура. Вход.md
+++ b/R0_tail/n8/Тремор/0. Вход/Структура. Вход.md
@@ -4,7 +4,7 @@
 Похищение Грибника у СКП Неформалами, перехват Грибника Перекидышами.
 Алек+Одет __ МайндКартаЛизы __ СпарингБраянТейлор+АлекЛизаБрифинг 
 
-[[лиза]] [[Структура. Вход. Tats.]]
+[[Структура. Tats.]]
 — Гулл татс долина смерти, тревога, пустота— решение фокус на чем либо 
 дезориентация, сомнение, пустота
 
