--- a/R0_tail/n8/Тремор/0. Вход/лиза/Структура. Tats..md
+++ b/R0_tail/n8/Тремор/0. Вход/лиза/Структура. Tats..md
@@ -1,3 +1,7 @@
+[[структура-N8]][[Структура. Вход.]][[Тремор]]
+[[Tats]] [[Браян/Мрак]]  [[Undersiders]] [[Заказчик]] 
+[[Прядь/Мона/Крыса]] [[Крассная Рукавица]] [[Мертвец]] [[Бледный]] [[Рыжий/Бром]] [[Мак/Матвей/Полярник]] [[Перекидыши]]
+[[Грибник]][[Мистер Дрём]][[Нейросферы]]
 Лиза в убежище в Доках
 	редактирует дополняет доклады систематезирует свою базу знаний.
 	Слежка за 
