--- a/R0_tail/n8/Тремор/1. (навь) Чистилище/фея/Фея.md
+++ b/R0_tail/n8/Тремор/1. (навь) Чистилище/фея/Фея.md
@@ -1,5 +1,5 @@
 За прорезание слипшихся глазок, Крысинная Фея принимает оплату кусочками душ.
-С.Д. Сказка Самозванки к двоедушникам.
+С.Д. Сказка Самозванки к Двоедушникам.
 
 отчуждённо
 яд и желчь\ярость по связи.
